--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container">
             <div class="inner__header">
-                <img src="./assets/img/Logo.png" alt="besnik." class="inner__header__logo">
+                <img src="./assets/img/logo.png" alt="besnik." class="inner__header__logo">
                 <div class="inner_content">
                     <ul class="inner__header__list">
                         <li class="inner__header__item"><a href="#!">Home</a></li>
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="inner_clients">
                     <div class="inner_clients_star">
-                        <img src="./assets/img/Logo.png" alt="Besnik">
+                        <img src="./assets/img/logo.png" alt="Besnik">
                         <img src="./assets/img/Star.svg" alt="Besnik Star">
                     </div>
                     <div class="inner_clients_review">
